unified path for scripts and fixed intellij config